--- a/springit/src/main/resources/application.properties
+++ b/springit/src/main/resources/application.properties
@@ -1,1 +1,55 @@
+spring.devtools.restart.enabled=true
+
+
+
+#can have comma seperated list if you wwant it for more than one enverionment 
+spring.profiles.active= dev
+#server.port=8080
+#server.port =8080
+#logging
+logging.level.com.vega.springit=DEBUG
+
+#info about our application
+info.application.name=springit
+info.application.description=Reddit clone using Spring Boot 2
+info.application.version=0.0.1
+
+#actuator
+management.endpoints.web.exposure.include=*
+#management.endpoints.health.show-details=always
+management.endpoints.health.show-details=when_authorized
+
+#h2
+#spring.h2.console.enabled=true
+
+#datasource(default to testdb)
+
+spring.datasource.name=springit
+#database initialization only worls with embedded databases, if you want to work use
+# it for other databases as well, you need to change the spring.datasource.intialization.mode property to always
+spring.datasource.initialization-mode=always
+#spring.datasource.url=jdbc:h2:mem:springit
+
+#mysql
+spring.datasource.url=jdbc:mysql://localhost:3306/springit?useSSL=false
+#spring.datasource.url=jdbc:mysql://localhost:3306/springit?useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=springit
+spring.datasource.password=khalsa12
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+
+#spring.datasource.driverClassName=org.h2.Driver1
+#spring.datasource.username=springit
+#spring.datasource.password=
+#spring.datasource.name=springit
+
+#JPA & Hibernate
+#create | create-drop | none | update | validate
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+
+#spring security
+spring.security.user.roles=ADMIN
+spring.security.user.name=user
+spring.security.user.password=user
 
